# hot-sector-screener

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  ci.yml.disabled
configs/: default.yml
configs/experiments/: daily_eod.yml  daily_premarket.yml
docs/: architecture.md  backtests.md  commands.md  configuration.md  output-contract.md  research-workspace-handoff.md
examples/: candidate_universe.v1.json  candidate_universe.v2.json  holdings_snapshot.v1.json  prompt_20260529.txt  topics_20260529.json
scripts/: backtest_deepseek.py  debug_kpl.py  deepseek_pick.py  feishu_report.py  hotspot_backtest.py  hotspot_etf_backtest.py
scripts/dev/: maintainability_metrics.py
src/hot_sector_screener/: __init__.py  candidate_contract.py  cli.py  concept_registry.py  confidence.py  config.py  daily_confirmation.py  data_quality.py  features.py  holdings_contract.py  holdings_overlay.py  observation_time.py  outcome_evaluation.py  portfolio.py  production_quality.py  quality_report.py  ranking.py  signal_export.py  source_gate.py  stock_mapper.py  topic_classifier.py  topic_provider.py  training.py  (+3 more)
tests/: candidate_factory.py  test_candidate_contract.py  test_cli_topics.py  test_config.py  test_daily_confirmation.py  test_holdings_overlay.py  test_llm_credentials.py  test_maintainability_metrics.py  test_observation_time.py  test_platform_completeness.py  test_production_quality.py  test_ranking.py  test_rotation_signal.py  test_signal_export.py  test_source_gate.py  test_stock_mapper.py  test_supplier_neutral_tree.py  test_topic_classifier.py  test_universe_builder.py
(+22 files in other folders)
