[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hot-sector-screener"
version = "0.1.0"
description = "A-share hot-sector candidate pool screener. Reads data lake signals (ths_hot, ETF rotation, concept constituents) and outputs a daily 50-100 stock watchlist for cross-sectional ranking."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Richard" },
]
keywords = ["quant", "a-share", "hot-sector", "screener", "trading"]
dependencies = [
  "a-share-factor-core>=0.1.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=14.0",
  "PyYAML>=6.0",
  "polars>=1.6",
  "tqdm>=4.66",
  "python-dateutil>=2.8",
  "scipy>=1.15.3",
  "ta>=0.11",
]

[project.optional-dependencies]
ml = [
  "lightgbm>=4.3",
]
dev = [
  "pytest>=8.3",
  "ruff>=0.8.0",
  "ty>=0.0.55",
  "pyarrow>=14.0",
]
[project.scripts]
hotsector = "hot_sector_screener.cli:main"

[tool.uv.sources]
a-share-factor-core = { path = "../a-share-factor-core" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RET", "RUF", "C90"]
fixable = ["I"]
extend-safe-fixes = ["UP"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
